update tap with updated FASTA headers

--- a/_data/import-tap/source/CHOCR.output.3
+++ b/_data/import-tap/source/CHOCR.output.3
@@ -451,8 +451,8 @@ CHOCR_YP_007627321.1;0_no_family_found;-;0;Response_reg;
 CHOCR_YP_007627328.1;bHLH;bHLH;1;HLH;
 CHOCR_YP_007627336.1;0_no_family_found;-;0;Response_reg;
 CHOCR_YP_007627480.1;0_no_family_found;-;0;DEAD;
-CHOCRpt_YP_007627293.1;HAT;GNAT;1;Acetyltransf_1;
-CHOCRpt_YP_007627321.1;0_no_family_found;-;0;Response_reg;
-CHOCRpt_YP_007627328.1;bHLH;bHLH;1;HLH;
-CHOCRpt_YP_007627336.1;0_no_family_found;-;0;Response_reg;
-CHOCRpt_YP_007627480.1;0_no_family_found;-;0;DEAD;
+CHOCR_pt_YP_007627293.1;HAT;GNAT;1;Acetyltransf_1;
+CHOCR_pt_YP_007627321.1;0_no_family_found;-;0;Response_reg;
+CHOCR_pt_YP_007627328.1;bHLH;bHLH;1;HLH;
+CHOCR_pt_YP_007627336.1;0_no_family_found;-;0;Response_reg;
+CHOCR_pt_YP_007627480.1;0_no_family_found;-;0;DEAD;
