--- a/_data/import-tap/source/FAGSY.output.3
+++ b/_data/import-tap/source/FAGSY.output.3
@@ -2706,4 +2706,4 @@ FAGSY_FSB016199001;MADS_MIKC;-;1;SRF-TF;K-box;
 FAGSY_FSB016199401;MYB;MYB-2R;1;MYB-2R;Myb_DNA-binding;
 FAGSY_FSB016199601;C2C2_Dof;-;1;zf-Dof;
 FAGSY_FSB016199801;GARP_G2-like;-;1;G2-like_Domain;
-FAGSYmt_FSB010804701;0_no_family_found;-;0;K-box;
+FAGSY_mt_FSB010804701;0_no_family_found;-;0;K-box;
