--- a/_data/import-tap/source/GEOTH.output.3
+++ b/_data/import-tap/source/GEOTH.output.3
@@ -86,4 +86,4 @@ GEOTH_WP_041264281.1;0_no_family_found;-;0;Response_reg;
 GEOTH_WP_041264285.1;HAT;GNAT;1;Acetyltransf_1;
 GEOTH_WP_041264482.1;HAT;GNAT;1;Acetyltransf_1;
 GEOTH_WP_049756681.1;HAT;GNAT;1;Acetyltransf_1;
-GEOTHpl_YP_001127569.1;0_no_family_found;-;0;DEAD;
+GEOTH_pl_YP_001127569.1;0_no_family_found;-;0;DEAD;
