--- a/_data/import-tap/source/STRCO.output.3
+++ b/_data/import-tap/source/STRCO.output.3
@@ -267,9 +267,9 @@ STRCO_NP_733537.1;HAT;GNAT;1;Acetyltransf_1;
 STRCO_NP_733553.1;0_no_family_found;-;0;Helicase_C;
 STRCO_NP_733611.1;0_no_family_found;-;0;Response_reg;
 STRCO_NP_733702.1;Sir2;-;1;SIR2;
-STRCOpl_NP_639653.1;HAT;GNAT;1;Acetyltransf_1;
-STRCOpl_NP_639689.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
-STRCOpl_NP_639709.1;0_no_family_found;-;0;DEAD;Helicase_C;
-STRCOpl_NP_639724.1;0_no_family_found;-;0;Sigma70_r2;
-STRCOpl_NP_639807.1;0_no_family_found;-;0;DEAD;
-STRCOpl_NP_639823.1;0_no_family_found;-;0;Helicase_C;
+STRCO_pl_NP_639653.1;HAT;GNAT;1;Acetyltransf_1;
+STRCO_pl_NP_639689.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
+STRCO_pl_NP_639709.1;0_no_family_found;-;0;DEAD;Helicase_C;
+STRCO_pl_NP_639724.1;0_no_family_found;-;0;Sigma70_r2;
+STRCO_pl_NP_639807.1;0_no_family_found;-;0;DEAD;
+STRCO_pl_NP_639823.1;0_no_family_found;-;0;Helicase_C;
