--- a/_data/import-tap/source/AGRTU.output.3
+++ b/_data/import-tap/source/AGRTU.output.3
@@ -144,16 +144,16 @@ AGRTU_NP_396448.1;CSD;-;1;CSD;
 AGRTU_NP_396499.1;0_no_family_found;-;0;Response_reg;
 AGRTU_NP_396565.1;0_no_family_found;-;0;DEAD;
 AGRTU_NP_535752.1;HAT;GNAT;1;Acetyltransf_1;
-AGRTUpl_NP_396078.2;HAT;GNAT;1;Acetyltransf_1;
-AGRTUpl_NP_396082.1;HAT;GNAT;1;Acetyltransf_1;
-AGRTUpl_NP_396105.1;0_no_family_found;-;0;Response_reg;
-AGRTUpl_NP_396201.1;0_no_family_found;-;0;Response_reg;
-AGRTUpl_NP_396242.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
-AGRTUpl_NP_396310.2;0_no_family_found;-;0;Response_reg;
-AGRTUpl_NP_396423.1;0_no_family_found;-;0;Sigma70_r2;
-AGRTUpl_NP_396439.1;0_no_family_found;-;0;Response_reg;
-AGRTUpl_NP_396444.2;0_no_family_found;-;0;Response_reg;
-AGRTUpl_NP_396448.1;CSD;-;1;CSD;
-AGRTUpl_NP_396499.1;0_no_family_found;-;0;Response_reg;
-AGRTUpl_NP_396565.1;0_no_family_found;-;0;DEAD;
-AGRTUpl_NP_535752.1;HAT;GNAT;1;Acetyltransf_1;
+AGRTU_pl_NP_396078.2;HAT;GNAT;1;Acetyltransf_1;
+AGRTU_pl_NP_396082.1;HAT;GNAT;1;Acetyltransf_1;
+AGRTU_pl_NP_396105.1;0_no_family_found;-;0;Response_reg;
+AGRTU_pl_NP_396201.1;0_no_family_found;-;0;Response_reg;
+AGRTU_pl_NP_396242.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
+AGRTU_pl_NP_396310.2;0_no_family_found;-;0;Response_reg;
+AGRTU_pl_NP_396423.1;0_no_family_found;-;0;Sigma70_r2;
+AGRTU_pl_NP_396439.1;0_no_family_found;-;0;Response_reg;
+AGRTU_pl_NP_396444.2;0_no_family_found;-;0;Response_reg;
+AGRTU_pl_NP_396448.1;CSD;-;1;CSD;
+AGRTU_pl_NP_396499.1;0_no_family_found;-;0;Response_reg;
+AGRTU_pl_NP_396565.1;0_no_family_found;-;0;DEAD;
+AGRTU_pl_NP_535752.1;HAT;GNAT;1;Acetyltransf_1;
