--- a/_data/import-tap/source/GUITH.output.3
+++ b/_data/import-tap/source/GUITH.output.3
@@ -1397,4 +1397,4 @@ GUITH_99884;RWP-RK;RKD;1;RWP-RK;
 GUITH_99948;0_no_family_found;-;0;Helicase_C;DEAD;
 GUITH_99965;C2H2;C2H2;1;zf-C2H2;
 GUITH_99993;0_no_family_found;-;0;IQ;
-GUITHpt_NP_050679.1;0_no_family_found;-;0;Response_reg;
+GUITH_pt_NP_050679.1;0_no_family_found;-;0;Response_reg;
