--- a/_data/import-tap/source/METJA.output.3
+++ b/_data/import-tap/source/METJA.output.3
@@ -19,4 +19,4 @@ METJA_NP_248512.1;0_no_family_found;-;0;Helicase_C;DEAD;
 METJA_NP_248519.1;0_no_family_found;-;0;DEAD;Helicase_C;
 METJA_NP_248538.1;HAT;GNAT;1;Acetyltransf_1;
 METJA_NP_248583.1;0_no_family_found;-;0;DEAD;Helicase_C;
-METJApl_NP_044176.1;C2H2;C2H2;1;zf-C2H2;
+METJA_pl_NP_044176.1;C2H2;C2H2;1;zf-C2H2;
