--- a/_data/import-tap/source/RHIET.output.3
+++ b/_data/import-tap/source/RHIET.output.3
@@ -125,44 +125,44 @@ RHIET_YP_471493.1;0_no_family_found;-;0;Helicase_C;
 RHIET_YP_471497.1;0_no_family_found;-;0;Sigma70_r4;Sigma70_r2;
 RHIET_YP_471534.1;HAT;GNAT;1;Acetyltransf_1;
 RHIET_YP_471535.1;HAT;GNAT;1;Acetyltransf_1;
-RHIETpl_NP_660015.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_471649.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_471730.1;SWI/SNF_SNF2;-;1;SNF2_N;
-RHIETpl_YP_471786.1;HAT;GNAT;1;Acetyltransf_1;
-RHIETpl_YP_471844.1;0_no_family_found;-;0;Sigma70_r4;
-RHIETpl_YP_471922.1;HAT;GNAT;1;Acetyltransf_1;
-RHIETpl_YP_471940.1;HAT;GNAT;1;Acetyltransf_1;
-RHIETpl_YP_471991.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472029.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472071.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
-RHIETpl_YP_472089.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472170.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
-RHIETpl_YP_472179.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472190.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472311.1;FHA;-;1;FHA;
-RHIETpl_YP_472340.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472367.1;HAT;GNAT;1;Acetyltransf_1;
-RHIETpl_YP_472424.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472456.1;0_no_family_found;-;0;Sigma70_r2;
-RHIETpl_YP_472496.1;HAT;GNAT;1;Acetyltransf_1;
-RHIETpl_YP_472673.1;0_no_family_found;-;0;Sigma70_r2;
-RHIETpl_YP_472677.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
-RHIETpl_YP_472693.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472700.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472722.1;0_no_family_found;-;0;DEAD;
-RHIETpl_YP_472748.1;CSD;-;1;CSD;
-RHIETpl_YP_472840.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472841.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472842.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472881.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472882.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472928.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_472951.1;HAT;GNAT;1;Acetyltransf_1;
-RHIETpl_YP_472965.1;HAT;GNAT;1;Acetyltransf_1;
-RHIETpl_YP_473039.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
-RHIETpl_YP_473080.1;HAT;GNAT;1;Acetyltransf_1;
-RHIETpl_YP_473096.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_473125.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_473146.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_473163.1;0_no_family_found;-;0;Response_reg;
-RHIETpl_YP_473164.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_NP_660015.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_471649.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_471730.1;SWI/SNF_SNF2;-;1;SNF2_N;
+RHIET_pl_YP_471786.1;HAT;GNAT;1;Acetyltransf_1;
+RHIET_pl_YP_471844.1;0_no_family_found;-;0;Sigma70_r4;
+RHIET_pl_YP_471922.1;HAT;GNAT;1;Acetyltransf_1;
+RHIET_pl_YP_471940.1;HAT;GNAT;1;Acetyltransf_1;
+RHIET_pl_YP_471991.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472029.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472071.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
+RHIET_pl_YP_472089.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472170.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
+RHIET_pl_YP_472179.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472190.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472311.1;FHA;-;1;FHA;
+RHIET_pl_YP_472340.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472367.1;HAT;GNAT;1;Acetyltransf_1;
+RHIET_pl_YP_472424.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472456.1;0_no_family_found;-;0;Sigma70_r2;
+RHIET_pl_YP_472496.1;HAT;GNAT;1;Acetyltransf_1;
+RHIET_pl_YP_472673.1;0_no_family_found;-;0;Sigma70_r2;
+RHIET_pl_YP_472677.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
+RHIET_pl_YP_472693.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472700.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472722.1;0_no_family_found;-;0;DEAD;
+RHIET_pl_YP_472748.1;CSD;-;1;CSD;
+RHIET_pl_YP_472840.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472841.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472842.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472881.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472882.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472928.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_472951.1;HAT;GNAT;1;Acetyltransf_1;
+RHIET_pl_YP_472965.1;HAT;GNAT;1;Acetyltransf_1;
+RHIET_pl_YP_473039.1;0_no_family_found;-;0;Sigma70_r2;Sigma70_r4;
+RHIET_pl_YP_473080.1;HAT;GNAT;1;Acetyltransf_1;
+RHIET_pl_YP_473096.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_473125.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_473146.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_473163.1;0_no_family_found;-;0;Response_reg;
+RHIET_pl_YP_473164.1;0_no_family_found;-;0;Response_reg;
